[gd_scene load_steps=7 format=3 uid="uid://bf8rdppjt5ud4"]

[ext_resource type="Script" path="res://Scripts/ResourceNode.gd" id="1_4wd5l"]
[ext_resource type="PackedScene" uid="uid://b1efmtpsry36j" path="res://Scenes/Resource Nodes/ResourceDrop.tscn" id="2_hojsk"]
[ext_resource type="TileSet" uid="uid://bu7mtd5cqdwxn" path="res://Forest_Tileset.tres" id="3_ahlw3"]
[ext_resource type="Script" path="res://Scripts/HealthComponent.gd" id="4_cw5a8"]
[ext_resource type="Script" path="res://Scripts/HurtboxComponent.gd" id="5_wmaq1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_se6hp"]
size = Vector2(23, 16)

[node name="Rock" type="StaticBody2D" groups=["Resource"]]
z_index = 6
script = ExtResource("1_4wd5l")
type = 1
resourceScene = ExtResource("2_hojsk")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("3_ahlw3")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 1, 2, 65535, 1, 3, -65536, 65537, 2, 0, 65537, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_se6hp")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("4_cw5a8")
maxHealth = 3

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource("5_wmaq1")
team = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_se6hp")

[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_area_entered"]
